app/assets/stylesheets/custom.css.scss
@import "bootstrap-sprockets";
@import "bootstrap";


@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}

/* universal */
body {
  padding-top: 80px;
}

section {
  overflow: auto;
  overflow-x: hidden;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

/* typography */
h1 h2, h3, h4, h5, h6, h9, h10 {
  line-height: 0.3;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 10px;
  text-align: center;
}

h2 {
  font-size: 3.5em;
  letter-spacing: -2px;
  margin-top: 15px;
  margin-bottom: 10px;
  margin-right: 7px;
  margin-left: 30px;
  text-align: center;

}

red {
  color: #BD2427;
}

orange {
  color: #F89A38;
}

yellow {
  color: #FBDE05;
}

lime {
  color: #8DC441;
}

green {
  color: #0E9D4A
}

h3 {
  font-size: 2.0em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  margin-top: 5px;
  text-align: left;
  font-weight: normal;
  color: #777;
}

h4 {
  font-size: 2.5em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: left;
  font-weight: normal;
  color: #777;
}

h6 {
  font-size: 4em;
  letter-spacing: 30px;
  margin-top: 70px;
  margin-bottom: 1px;
  margin-right: 30px;
  text-align: center;
}

h7 {
  font-size: 1.5em;
  letter-spacing: 5px;
  text-align: left;
  font-weight: normal;
}

h8 {
  font-size: 1.8em;
  letter-spacing: -1px;
  margin-bottom: 20px;
  text-align: left;
  font-weight: normal;
}

h9 {
  font-size: 2.0em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: left;
  font-weight: normal;
  color: #E5173F;
}

h10 {
  font-size: 2.5em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: left;
  font-weight: normal;
  color: #E5173F;
}

h11 {
  font-size: 3.5em;
  margin-top: 100px;
  margin-bottom: 10px;
  margin-right: 30px;
  text-align: center;
}

h12 {
  font-size: 1.9em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  margin-top: 5px;
  text-align: left;
  font-weight: normal;
  color: #777;
}

h13 {
  font-size: 1.4em;
  line-height: 1.7em;
}

h14 {
  font-size: 2.5em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  margin-top: 5px;
  border-bottom: 1px solid #eaeaea;
  text-align: left;
  font-weight: normal;
  color: #777;
}

h15 {
  font-size: 2.0em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  margin-top: 5px;
  text-align: left;
  font-weight: normal;
  color: #000000;
}

ul.pagination li {display: inline;}

ul.pagination li a {
    color: black;
    float: left;
    padding: 8px 16px;
    text-decoration: none;
    transition: background-color .3s;
    border: 1px solid #ddd;
    font-size: 18px;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header */
#logo {
  float: left;
  margin-right: 10px;
  font-size: 1.7em;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  font-weight: normal;
}

body {
   background-image: image-url('Triangle2.jpg');
}

.navbar-custom {
    background-color:#CD2727;
    color:#CD2727;
    border-radius:0;
}

#logo:hover {
  color: #fff;
  text-decoration: none;
}

/* footer */
footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid #eaeaea;
  color: #777;
}

footer a {
  color: #555;
}

footer a:hover {
  color: #222;
}

footer small {
  float: left;
}

footer ul {
  float: right;
  list-style: none;
}

footer ul li {
  float: left;
  margin-left: 15px;
}

/* miscellaneous */
.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* sidebar */
aside {
  section.user_info {
    margin-top: 20px;
  }
  section {
    padding: 10px 0;
    margin-top: 20px;
    &:first-child {
      border: 0;
      padding-top: 0;
    }
    span {
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }
    h1 {
      font-size: 1.4em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
      margin-top: 0px;
    }
  }
}

.divider{
    position:absolute;
    left:50%;
    top:10%;
    bottom:10%;
    border-left:1px solid white;
}


/* Gravatar */
.gravatar {
  float: left;
  margin-right: 10px;
  line-height: 0.3;
  margin-top: -10px;
}

.gravatar_edit {
  margin-top: 15px;
}

.form-inline {
   margin-left: 0;
    margin-right: 0;
}

/* Red */
//$bgDefault    : #E6002E;
$bgDefault      : #E5173F;
$bgHighlight    : #c0392b;
$colDefault     : #ecf0f1;
$colHover       : #ffbbbc; 

/* --- Style --- */
.navbar-default {
    background-color: $bgDefault;
    border-color: $bgHighlight;
    .navbar-brand {
        color: $colDefault;
        &:hover, &:focus {
            color: $colHover; }}
    .navbar-nav {
        > li {
            > a {
                color: $colDefault;
                &:hover, &:focus {
                    color: $colHover;   }}}
        .active {
            > a, > a:hover, > a:focus {
                color: $colHover;
                background-color: $bgHighlight; }}
        .open {
            > a, > a:hover, > a:focus {
                color: $colHover;
                background-color: $bgHighlight;
                .caret {
                    border-top-color: $colHover;
                    border-bottom-color: $colHover; }}}
        > .dropdown {
            > a {
                .caret {
                    border-top-color: $colDefault;
                    border-bottom-color: $colDefault; }
                &:hover, &:focus {
                    .caret {
                        border-top-color: $colHover;
                        border-bottom-color: $colHover; }}}}}
    .navbar-toggle {
        border-color: $bgHighlight;
        &:hover, &:focus {
            background-color: $bgHighlight; }
        .icon-bar {
            background-color: $colDefault; }}}
@media (max-width: 767px) {
    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
        color: $colDefault;
        &:hover, &:focus {
            color: $colHover;
            background-color: $bgHighlight; }}
}

/* forms */
input, textarea, select, .uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}

#error_explanation {
  color: red;
  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.field_with_errors {
  @extend .has-error;
  .form-control {
    color: $state-danger-text;
  }
}
  /* Users index */

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-bottom: 1px solid $gray-lighter;
  }
}

.checkbox {
  margin-top: -10px;
  margin-bottom: 10px;
  span {
    margin-left: 20px;
    font-weight: normal;
  }
}

#session_remember_me {
  width: auto;
  margin-left: 0;
}

